# marketing-insight-report-pipeline

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: sample_campaign_data.csv
outputs/: example_analytics_report.md
src/marketing_insight_pipeline/: __init__.py  ai_insights.py  cli.py  metrics.py  ranking.py  reporter.py  validator.py
tests/: test_ai_insights.py  test_metrics.py  test_ranking.py  test_reporter.py  test_validator.py
