[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-insight-report-pipeline"
version = "0.1.0"
description = "CLI pipeline for deterministic marketing campaign validation, KPI analysis, ranking, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Marketing Analytics Contributors"}]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
marketing-insight-pipeline = "marketing_insight_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
